tests/snapshots/dependencies__package_bin__fail__package_multi_target.snap
---
source: tests/dependencies.rs
expression: output
---
CMD:
dependencies
--package
workspace-package
--bin
foobar

STDERR:
Error: No package found with name "workspace-package".

Packages present in workspace:
- package_multi_target


STDOUT:
