tests/snapshots/dependencies__package_bin__fail__virtual_workspace_single_package_bin_target.snap
---
source: tests/dependencies.rs
expression: output
---
CMD:
dependencies
--package
workspace-package
--bin
foobar

STDERR:
Error: No package found with name "workspace-package".

Packages present in workspace:
- package_bin_target


STDOUT:
