tests/snapshots/dependencies__package_bin__fail__workspace_single_package_bin_target.snap
---
source: tests/dependencies.rs
expression: output
---
STDERR:
Error: No package found with name "workspace-package".

Packages present in workspace:
- package_bin_target


STDOUT:
