tests/snapshots/dependencies__package_bin__fail__workspace_single_package_lib_target.snap
---
source: tests/dependencies.rs
expression: output
---
COMMAND:
dependencies
--package
workspace-package
--bin
foobar

STDERR:
Error: No package found with name "workspace-package".

Packages present in workspace:
- package_lib_target


STDOUT:
