tests/snapshots/dependencies__package_bin__fail__workspace_single_package_multi_target.snap
---
source: tests/dependencies.rs
expression: output
snapshot_kind: text
---
COMMAND:
dependencies
--package
workspace-package
--bin
foobar

STDERR:
Error: No package found with name "workspace-package".

Packages present in workspace:
- package_multi_target


STDOUT:
